# quad

./: Cargo.toml  LOG.md  Main.gd  Main.tscn  Makefile  README.md  Sensor.gdns  log  project.godot
.import/: connected.png-6b5ea4a31c923fa14854135029cfd53e.md5  disconnected.png-8029b9009e16446b9430a460c36671a8.md5  disconnected.png-8029b9009e16446b9430a460c36671a8.stex  progress_bg.png-958c3c1123598635c1ce4b9f8730c360.stex  progress_fill.png-b1304aa15a95143c5d9bee8cc40ba76b.md5  progress_fill.png-b1304aa15a95143c5d9bee8cc40ba76b.stex
assets/: connected.png.import  disconnected.png.import
client-util/: Cargo.toml
client-util/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
flight-controller/: Cargo.toml
flight-controller/src/: main.rs  spatial.rs
mission-control/: Main.gd  Main.tscn  Sensor.gdns  project.godot
mission-control/.import/: connected.png-6b5ea4a31c923fa14854135029cfd53e.md5  connected.png-6b5ea4a31c923fa14854135029cfd53e.stex  connected.png-b2a80598582559f3223d648aa28a399a.stex  progress_bg.png-958c3c1123598635c1ce4b9f8730c360.md5
mission-control/assets/: progress_bg.aseprite  progress_bg.png.import  progress_fill.png.import
resources/: part.stl  wiring
stm32-device/: Cargo.toml  Embed.toml
stm32-device/.cargo/: config
stm32-device/src/: main.rs  spatial.rs
stm32-rust/: Cargo.toml  e
stm32-rust/src/: lib.rs
