[package]
name = "stm32-device"
version = "0.1.0"
authors = ["Roman Kotelnikov <roman.kotelnikov@outlook.com>"]
description = "Scraps of code to work with mpu 6050"
categories = ["embedded", "no-std"]
edition = "2021"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rtic = "1.0.0"
systick-monotonic = "1.0.0"
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
embedded-hal = "0.2.4"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
nalgebra = { version = "0.24.1", default-features = false }
libm = "0.2.1"
nb = "*"

mpu6050 = { path = "../../../mpu6050" }
common = { path = "../common" }

[dependencies.stm32f1xx-hal]
version = "0.8.0"
features = ["rt", "stm32f103", "medium"]

[[bin]]
name = "stm32-device"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
debug = true
